--- a/курсач/Properties/Resources.resx
+++ b/курсач/Properties/Resources.resx
@@ -118,29 +118,23 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Kawasaki_Ninja_Fi_ABS_-_Candy_Burn_Orange.4" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Kawasaki_Ninja_Fi_ABS_-_Candy_Burn_Orange.4.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="fonstola.ru_353687_1920x1200" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fonstola.ru_353687_1920x1200.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="52CiueHcMrE" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\52CiueHcMrE.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="download (3)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\download (3).gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="qF5VIoYx" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\qF5VIoYx.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="skull-scooter-minimalism-minimalist" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\skull-scooter-minimalism-minimalist.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="kawasaki_ninja_250r_2009_1280x800_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\kawasaki_ninja_250r_2009_1280x800_red.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="minimalizm-motocikl-moto-fon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\minimalizm-motocikl-moto-fon.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="fonstola.ru_353687_1920x1200" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\fonstola.ru_353687_1920x1200.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="qF5VIoYx" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\qF5VIoYx.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="8NOhnHnAbCs" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\8NOhnHnAbCs.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="anime-girl-kawasaki-h2r-4k-kh-1360x768" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\anime-girl-kawasaki-h2r-4k-kh-1360x768.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Kawasaki_Ninja_Fi_ABS_-_Candy_Burn_Orange.4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Kawasaki_Ninja_Fi_ABS_-_Candy_Burn_Orange.4.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="2018-kawasaki-zx10r-4k-t8" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\2018-kawasaki-zx10r-4k-t8.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -148,7 +142,31 @@
   <data name="0Y1CzJ4siug" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\0Y1CzJ4siug.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="kawasaki_ninja_250r_2009_1280x800_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\kawasaki_ninja_250r_2009_1280x800_red.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="download (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\download (1).gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="download (3)1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\download (3)1.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="download" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\download.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="8NOhnHnAbCs" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\8NOhnHnAbCs.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="skull-scooter-minimalism-minimalist" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\skull-scooter-minimalism-minimalist.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anime-girl-kawasaki-h2r-4k-kh-1360x768" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\anime-girl-kawasaki-h2r-4k-kh-1360x768.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="52CiueHcMrE" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\52CiueHcMrE.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="download (2)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\download (2).gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="11661472_lens-flare-flare-transparent-solar-transparent-png" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\11661472_lens-flare-flare-transparent-solar-transparent-png.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
